# Universal-API-Tester

./: .gitignore  LICENSE  PROJECT_DETAILS.md  README.md  config.json.example  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  chat.py  endpoint_tester.py  provider_manager.py  scanner.py  tester.py
app/providers/: __init__.py  anthropic.py  base.py  cerebras.py  cohere.py  common.py  deepinfra.py  deepseek.py  fireworks.py  google.py  groq.py  mistral.py  nvidia.py  openai.py  opencode_zen.py  openrouter.py  perplexity.py  together.py  xai.py  xiaomi.py
app/ui/: __init__.py  colors.py  table.py  terminal.py
app/utils/: __init__.py  config.py  exceptions.py  exporter.py  logger.py  model_db.py
app/web/: __init__.py  server.py
app/web/templates/: index.html
